--- a/examples/SampleRN20/android/app/build.gradle
+++ b/examples/SampleRN20/android/app/build.gradle
@@ -77,7 +77,6 @@ def enableProguardInReleaseBuilds = false
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
 
     defaultConfig {
         applicationId "com.samplern20"
@@ -119,8 +118,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:23.0.1"
-    compile "com.facebook.react:react-native:0.20.+"
-    compile project(':react-native-webview-bridge')
+    api fileTree(dir: "libs", include: ["*.jar"])
+    api "com.android.support:appcompat-v7:23.0.1"
+    api "com.facebook.react:react-native:0.20.+"
+    api project(':react-native-webview-bridge')
 }
