--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,4 +32,5 @@ repositories {
 dependencies {
     compile 'status-im:function:0.0.1'
     compile 'com.facebook.react:react-native:+'
+    implementation "com.android.support:appcompat-v7:23.0.1"
 }
