--- a/android/build.gradle
+++ b/android/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     compile 'com.github.status-im:function:0.0.1'
     compile 'com.facebook.react:react-native:+'
     implementation "com.android.support:appcompat-v7:26.1.0"
+    implementation project(':react-native-webview')
 }
