--- a/examples/SampleRN20/android/settings.gradle
+++ b/examples/SampleRN20/android/settings.gradle
@@ -1,4 +1,5 @@
 rootProject.name = 'SampleRN20'
 
-include ':app', ':react-native-webview-bridge'
+include ':app', ':react-native-webview', ':react-native-webview-bridge'
+project(':react-native-webview').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-webview/android')
 project(':react-native-webview-bridge').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-webview-bridge/android')
